@@ -6,7 +6,10 @@
  'crypto': '',
  'data_chan_type': 'u',
  'dl_dir': 'X:/p2p/sumi/incoming/',
+ 'irc_chans': {'#sumi': 'anon'},
  'irc_nick': 'sumiget',
+ 'irc_port': 6667,
+ 'irc_server': 'irc.xtc-dreams.com',
  'maxwait': 7,
  'mss': 1472,
  'myip': '10.0.0.100',
